v1.1.6
------

Rendering improvements.

v1.1.5
------

Better tiling on 1x uphill and flat bridges.

v1.1.4
------

Rendering and tiling improvements.

v1.1.3
------

Better rendering of 1x zoom sprites.

v1.0.2
------

Improvements to diagonal track alignment.
Remove grass showing under station platforms.
Improved tiling of sleepers.

v1.0.1
------

Reduced gridline effect on track tile borders.

v1.0.0
------

Initial release with multiple track types in 2x zoom and 32bpp.