@@ -7,7 +7,7 @@
       "_comment": "flat greys",
       "start": 1,
       "end": 15,
-      "smoothness": 0
+      "smoothness": 2
     },
     {
       "_comment": "blue greys",
