@@ -2,17 +2,26 @@
 template ground_tile(x, y, m) { [x*m, (y+8)*m, 64*m, 31*m, -31*m, (m/2)] }
 template ground_tile_slope(x, y, m, t) { [x*m, y*m, 64*m, 39*m, -31*m, (-7*m)-(m/2)-t] }
 
+template bridge_ground_tile(x, y, m, t) { [x*m, (y+8)*m, 64*m, 31*m, -(31+t)*m, (m/2)] }
+
+
 // Tracks with ballast
 template tmpl_straight_y_m(y,m) {
     ground_tile(0, y, m)
     ground_tile(72, y, m)
 }
 
+template tmpl_bridge_straight_y_m(y,m) {
+    bridge_ground_tile(0, y, m, 1)
+    bridge_ground_tile(72, y, m, -1)
+}
+
+
 template tmpl_slope_y_m(y, m, t) {
     ground_tile_slope(0, y, m, 0)
     ground_tile_slope(72, y, m, 0)
     ground_tile_slope(144, y, m, 0)
-    ground_tile_slope(216, y, m, m==1 || t==1 ? 1 : 0)
+    ground_tile_slope(216, y, m, m==1 ? 1 : 0)
 }
 
 template tmpl_diagonal_y_m(y,m) {
@@ -24,34 +33,34 @@ template tmpl_diagonal_y_m(y,m) {
 
 // Ballast underlays
 template tmpl_crossing_underlays(m) {
-    ground_tile(72, 344, m)
-    ground_tile(216, 344,m)
-    ground_tile(0, 344,m)
-    ground_tile(144, 344,m)
+    ground_tile(72, 387, m)
+    ground_tile(216, 387,m)
     ground_tile(0, 387,m)
+    ground_tile(144, 387,m)
+    ground_tile(0, 430,m)
 }
 
 template tmpl_underlay_railtypes(m) {
     tmpl_straight_y_m(0, m)
     tmpl_diagonal_y_m(43, m)
-    tmpl_slope_y_m(129,m,0)
+    tmpl_slope_y_m(172,m,0)
 
     // X-crossing
-    ground_tile(0, 215, m)
+    ground_tile(0, 258, m)
 
     tmpl_crossing_underlays(m)
 }
 
 // Tracks without ballast
 template tmpl_overlay_railtypes(m) {
-    tmpl_straight_y_m(172, m)
-    tmpl_diagonal_y_m(258, m)
-    tmpl_slope_y_m(129,m,0) // only used to show track reservations
+    tmpl_straight_y_m(215, m)
+    tmpl_diagonal_y_m(301, m)
+    tmpl_slope_y_m(172,m,0) // only used to show track reservations
 }
 
 // Bridges
 template tmpl_bridges_underlay(m) {
-    tmpl_straight_y_m(430, m)
+    tmpl_bridge_straight_y_m(473, m)
     tmpl_slope_y_m(129,m,1)
     //tmpl_diagonal_y_m(215, m)
 }
