@@ -2,6 +2,7 @@ v1.1.6
 ------
 
 Rendering improvements.
+Respect bridge slope boundaries.
 
 v1.1.5
 ------
